--- a/launcher_config.json
+++ b/launcher_config.json
@@ -1,1 +1,1 @@
-{"QuickLaunchVersions":[],"BackgroundType":3,"CustomColor":"#FF1E1E1E","PlayerName":"\u6DFB\u52A0\u73A9\u5BB6","Players":[],"ShowDragHint":true}
+{"QuickLaunchVersions":[],"BackgroundType":3,"CustomColor":"#FF1E1E1E","PlayerName":"\u6DFB\u52A0\u73A9\u5BB6","Players":[],"ShowDragHint":true,"DeepSeekApiKey":"","DeepSeekModel":"deepseek-chat"}
